# HelloQtPlugin

./: CMakeLists.txt  Hello.json.in  README.md  resources.qrc
.github/workflows/: build_cmake.yml
examples/proj1/: example.jproj  example.py
examples/proj1/mylib/: mylib.jproj
resources/: rtfm.md  run_conf_info.qml  text-x-jproj-mimetype.xml
src/: buildsystem.cpp  buildsystem.h  hello.cpp  hello.h  hello_global.h  helloconstants.h  jprojfileparser.cpp  jprojfileparser.h  jprojproject.cpp  jprojproject.h  jprojprojectimporter.cpp  jprojprojectimporter.h  runconfiguration.cpp  runconfiguration.h
